--- a/index.html
+++ b/index.html
@@ -57,20 +57,18 @@
 <!-- === ОСНОВНА СІТКА === -->
 <div class="main-grid">
 
-  <!-- Ліва колонка (тепер динамічна) -->
-  <aside class="sidebar">
-    <div class="block">
-      <h2>Підбірки</h2>
-    </div>
+ <!-- Ліва колонка (динамічна) -->
+<aside class="sidebar">
+  <div class="block">
+    <h2>Підбірки</h2>
+  </div>
 
-    <!-- 🎬 Тут JS сам підставить рандомні підбірки -->
-    <div id="dynamicCollections"></div>
-
-    <!-- 🎞 Актуальні категорії -->
-    <div id="dynamicSeries"></div>
-    <div id="dynamicFilms"></div>
-    <div id="dynamicCartoons"></div>
-  </aside>
+  <!-- Динамічне заповнення -->
+  <div id="dynamicCollections"></div>
+  <div id="dynamicSeries"></div>
+  <div id="dynamicFilms"></div>
+  <div id="dynamicCartoons"></div>
+</aside>
 
 
   <!-- Права колонка (тепер фільми) -->
@@ -284,6 +282,7 @@ async function loadLatestSeries() {
     loadTopFilms();
   });
 </script>
+<script>
 /* === 🎬 ДИНАМІЧНІ БЛОКИ === */
 async function loadDynamicSidebar() {
   const sidebar = document.querySelector(".sidebar");
@@ -385,13 +384,15 @@ async function loadDynamicSidebar() {
   }
 }
 
-// Запуск при завантаженні
-loadDynamicSidebar();
+document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
+</script>
+
 
 
 
 </body>
 </html>
+
 
 
 
