--- a/index.html
+++ b/index.html
@@ -283,114 +283,127 @@ async function loadLatestSeries() {
   });
 </script>
 <script>
-/* === 🎬 ДИНАМІЧНІ БЛОКИ === */
 async function loadDynamicSidebar() {
   const sidebar = document.querySelector(".sidebar");
   if (!sidebar) return;
 
-    // 🧩 Підбірки
-  const { data: collections } = await supabase
-    .from("films_site")
-    .select("id, title, poster, type")
-    .ilike("type", "%збірк%");
+  // 🧩 Підбірки
+  try {
+    const { data: collections, error: collErr } = await supabase
+      .from("films_site")
+      .select("id, title, poster, type")
+      .ilike("type", "%збірк%");
+    if (collErr) console.warn("❌ Помилка підбірок:", collErr);
 
-  if (collections?.length) {
-    const random = collections.sort(() => 0.5 - Math.random()).slice(0, 5);
-    const container = document.getElementById("dynamicCollections");
-    container.innerHTML = random
-      .map(
-        (c) => `
-        <div class="pick" onclick="window.location.href='collection.html?id=${c.id}'">
-          <img src="${c.poster || 'https://via.placeholder.com/150'}">
-          <p>${c.title}</p>
-        </div>`
-      )
-      .join("");
+    if (collections?.length) {
+      const randomCollections = collections.sort(() => 0.5 - Math.random()).slice(0, 5);
+      const container = document.getElementById("dynamicCollections");
+      container.innerHTML = randomCollections
+        .map(
+          (c) => `
+          <div class="pick" onclick="window.location.href='collection.html?id=${c.id}'">
+            <img src="${c.poster || 'https://via.placeholder.com/150'}">
+            <p>${c.title}</p>
+          </div>`
+        )
+        .join("");
+    }
+  } catch (e) {
+    console.error("❌ Помилка колекцій:", e);
   }
 
-
   // 🎬 Актуальні серіали
-  const { data: series } = await supabase
-    .from("films_site")
-    .select("title, poster, type")
-    .eq("type", "Серіал");
+  try {
+    const { data: series, error: serErr } = await supabase
+      .from("films_site")
+      .select("id, title, poster, type")
+      .eq("type", "Серіал");
+    if (serErr) console.warn("❌ Помилка серіалів:", serErr);
 
-  // залишаємо лише унікальні назви серіалів
-  const uniqueSeries = Array.from(new Map(series.map(s => [s.title, s])).values());
-  const random = uniqueSeries.sort(() => 0.5 - Math.random()).slice(0, 3);
+    const uniqueSeries = Array.from(new Map(series.map(s => [s.title, s])).values());
+    const randomSeries = uniqueSeries.sort(() => 0.5 - Math.random()).slice(0, 3);
 
-  if (series?.length) {
-    const random = series.sort(() => 0.5 - Math.random()).slice(0, 3);
-    document.getElementById("dynamicSeries").innerHTML = `
-      <div class="sub-category">
-        <h3>🎬 Актуальні серіали</h3>
-        <div class="mini-grid">
-          ${random
-            .map(
-              (s) => `
-              <div class="mini-card" onclick="window.location.href='film.html?id=${s.id}'">
-                <img src="${s.poster || 'https://via.placeholder.com/150'}">
-                <p>${s.title}</p>
-              </div>`
-            )
-            .join("")}
-        </div>
-      </div>`;
+    if (randomSeries.length) {
+      document.getElementById("dynamicSeries").innerHTML = `
+        <div class="sub-category">
+          <h3>🎬 Актуальні серіали</h3>
+          <div class="mini-grid">
+            ${randomSeries
+              .map(
+                (s) => `
+                <div class="mini-card" onclick="window.location.href='film.html?id=${s.id}'">
+                  <img src="${s.poster || 'https://via.placeholder.com/150'}">
+                  <p>${s.title}</p>
+                </div>`
+              )
+              .join("")}
+          </div>
+        </div>`;
+    }
+  } catch (e) {
+    console.error("❌ Помилка серіалів:", e);
   }
 
   // 🎞 Актуальні фільми
-  const { data: films } = await supabase
-    .from("films_site")
-    .select("id, title, poster, type")
-    .eq("type", "Фільм");
+  try {
+    const { data: films, error: filmErr } = await supabase
+      .from("films_site")
+      .select("id, title, poster, type")
+      .eq("type", "Фільм");
+    if (filmErr) console.warn("❌ Помилка фільмів:", filmErr);
 
-  if (films?.length) {
-    const random = films.sort(() => 0.5 - Math.random()).slice(0, 3);
-    document.getElementById("dynamicFilms").innerHTML = `
-      <div class="sub-category">
-        <h3>🎞 Актуальні фільми</h3>
-        <div class="mini-grid">
-          ${random
-            .map(
-              (f) => `
-              <div class="mini-card" onclick="window.location.href='film.html?id=${f.id}'">
-                <img src="${f.poster || 'https://via.placeholder.com/150'}">
-                <p>${f.title}</p>
-              </div>`
-            )
-            .join("")}
-        </div>
-      </div>`;
+    const randomFilms = films.sort(() => 0.5 - Math.random()).slice(0, 3);
+    if (randomFilms.length) {
+      document.getElementById("dynamicFilms").innerHTML = `
+        <div class="sub-category">
+          <h3>🎞 Актуальні фільми</h3>
+          <div class="mini-grid">
+            ${randomFilms
+              .map(
+                (f) => `
+                <div class="mini-card" onclick="window.location.href='film.html?id=${f.id}'">
+                  <img src="${f.poster || 'https://via.placeholder.com/150'}">
+                  <p>${f.title}</p>
+                </div>`
+              )
+              .join("")}
+          </div>
+        </div>`;
+    }
+  } catch (e) {
+    console.error("❌ Помилка фільмів:", e);
   }
 
   // 🧸 Мультсеріали
-    const { data: cartoons } = await supabase
-    .from("films_site")
-    .select("title, poster, type")
-    .eq("type", "Мультсеріал");
+  try {
+    const { data: cartoons, error: cartErr } = await supabase
+      .from("films_site")
+      .select("id, title, poster, type")
+      .eq("type", "Мультсеріал");
+    if (cartErr) console.warn("❌ Помилка мультсеріалів:", cartErr);
 
-  // залишаємо лише унікальні мультсеріали
-  const uniqueCartoons = Array.from(new Map(cartoons.map(c => [c.title, c])).values());
-  const random = uniqueCartoons.sort(() => 0.5 - Math.random()).slice(0, 3);
+    const uniqueCartoons = Array.from(new Map(cartoons.map(c => [c.title, c])).values());
+    const randomCartoons = uniqueCartoons.sort(() => 0.5 - Math.random()).slice(0, 3);
 
-
-  if (cartoons?.length) {
-    const random = cartoons.sort(() => 0.5 - Math.random()).slice(0, 3);
-    document.getElementById("dynamicCartoons").innerHTML = `
-      <div class="sub-category">
-        <h3>🧸 Мультсеріали</h3>
-        <div class="mini-grid">
-          ${random
-            .map(
-              (m) => `
-              <div class="mini-card" onclick="window.location.href='film.html?id=${m.id}'">
-                <img src="${m.poster || 'https://via.placeholder.com/150'}">
-                <p>${m.title}</p>
-              </div>`
-            )
-            .join("")}
-        </div>
-      </div>`;
+    if (randomCartoons.length) {
+      document.getElementById("dynamicCartoons").innerHTML = `
+        <div class="sub-category">
+          <h3>🧸 Мультсеріали</h3>
+          <div class="mini-grid">
+            ${randomCartoons
+              .map(
+                (m) => `
+                <div class="mini-card" onclick="window.location.href='film.html?id=${m.id}'">
+                  <img src="${m.poster || 'https://via.placeholder.com/150'}">
+                  <p>${m.title}</p>
+                </div>`
+              )
+              .join("")}
+          </div>
+        </div>`;
+    }
+  } catch (e) {
+    console.error("❌ Помилка мультсеріалів:", e);
   }
 }
 
@@ -402,6 +415,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
