--- a/index.html
+++ b/index.html
@@ -141,25 +141,33 @@ async function loadLatestFilms() {
   if (!container) return;
   container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
+  // 🔹 Беремо всі фільми, серіали, мультфільми, мультсеріали
   const { data, error } = await supabase
     .from("films_site")
-    .select("*")
+    .select("id, title, poster, type, genre, year, imdb, pro_access")
     .in("type", ["Фільм", "Мультфільм", "Мультсеріал", "Серіал"])
     .order("id", { ascending: false })
-    .limit(20);
+    .limit(100); // беремо більше, потім відфільтруємо
 
   if (error) {
     console.error("❌ Помилка завантаження останніх:", error);
     container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
     return;
   }
+
   if (!data?.length) {
     container.innerHTML = `<p style="color:white;">Поки що немає надходжень.</p>`;
     return;
   }
 
+  // 🔹 Групуємо унікальні за назвою (щоб серіали/мультсеріали не дублювались)
+  const unique = Array.from(new Map(data.map(item => [item.title, item])).values());
+
+  // 🔹 Беремо 20 останніх
+  const latest = unique.slice(0, 20);
+
   container.innerHTML = "";
-  data.forEach(item => {
+  latest.forEach(item => {
     const card = document.createElement("div");
     card.className = "film";
     card.innerHTML = `
@@ -169,18 +177,25 @@ async function loadLatestFilms() {
       </div>
       <div class="title">${item.title || ''}</div>
       <div class="meta">
+        <span>${item.type || ''}</span> • 
         <span>${item.genre || ''}</span> • 
         <span>${item.year || ''}</span> • 
         <span>IMDb: ${item.imdb || '—'}</span>
       </div>
     `;
     card.addEventListener("click", () => {
-      window.location.href = "film.html?id=" + item.id;
+      // 🎬 якщо серіал — відкриваємо сторінку серіалу, якщо фільм — сторінку фільму
+      if (item.type === "Серіал" || item.type === "Мультсеріал") {
+        window.location.href = "series.html?title=" + encodeURIComponent(item.title);
+      } else {
+        window.location.href = "film.html?id=" + item.id;
+      }
     });
     container.appendChild(card);
   });
 }
 </script>
+
 <script>
 async function loadLatestSeries() {
   const container = document.getElementById("series-list");
@@ -386,6 +401,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
