--- a/profile.html
+++ b/profile.html
@@ -36,20 +36,14 @@
     <button class="btn btn-ghost" id="logout-btn">Вийти</button>
   </div>
 
- <div class="card" id="auth-card">
-  <h3>Увійти через Email або Телефон</h3>
+<div class="card" id="auth-card">
+  <h3>Увійти через Email</h3>
   <div style="display:flex;flex-direction:column;gap:8px;max-width:320px;">
     <input id="email-input" class="input" type="email" placeholder="email@example.com" />
     <button class="btn btn-primary" id="email-login-btn">Надіслати посилання для входу</button>
-
-    <p class="muted" style="text-align:center;margin:6px 0;">або</p>
-
-    <input id="phone-input" class="input" type="tel" placeholder="+380XXXXXXXXX" />
-    <button class="btn btn-primary" id="phone-otp-btn">Надіслати код</button>
-    <input id="otp-input" class="input" type="text" placeholder="Код із SMS" style="display:none;" />
-    <button class="btn btn-primary" id="verify-otp-btn" style="display:none;">Підтвердити код</button>
   </div>
 </div>
+
 
 
 <footer style="text-align:center;color:#8a8f98;margin:32px 0">© 2025 KinoSite</footer>
