--- a/profile.html
+++ b/profile.html
@@ -43,6 +43,23 @@
     <button class="btn btn-primary" id="email-login-btn">Надіслати посилання для входу</button>
   </div>
 </div>
+<!-- === Вхід через Telegram === -->
+<div class="card">
+  <h3>Увійти через Telegram</h3>
+  <p class="muted">
+    Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.
+  </p>
+
+  <!-- Telegram Login Widget -->
+  <script async src="https://telegram.org/js/telegram-widget.js?22"
+          data-telegram-login=@RelaxBox_UA_bot"
+          data-size="large"
+          data-userpic="false"
+          data-request-access="write"
+          data-radius="8"
+          data-onauth="onTelegramAuth">
+  </script>
+</div>
 
 
 
@@ -83,6 +100,34 @@ function onUserLoggedIn(user) {
   document.getElementById("hello-line").innerText = "Вітаю, " + (user.email || user.phone);
   document.getElementById("pro-status").innerText = "Free — увійди через Telegram, щоб синхронізувати PRO.";
 }
+// === Вхід через Telegram ===
+async function onTelegramAuth(user) {
+  console.log("Telegram user:", user);
+
+  // 1️⃣ ховаємо блок входу
+  document.getElementById("auth-card").style.display = "none";
+  document.getElementById("user-card").style.display = "block";
+
+  // 2️⃣ показуємо ім’я користувача
+  document.getElementById("hello-line").innerText =
+    `Вітаю, ${user.first_name || ""} ${user.last_name || ""}`.trim();
+
+  // 3️⃣ перевіряємо PRO у Google Таблиці
+  try {
+    const res = await fetch("https://script.google.com/macros/s/ТУТ_ТВІЙ_АППС_СКРИПТ_URL/exec?user_id=" + user.id);
+    const json = await res.json();
+
+    if (json.isPro) {
+      document.getElementById("pro-status").innerHTML = "✅ PRO активний";
+    } else {
+      document.getElementById("pro-status").innerText = "❌ Без PRO";
+    }
+  } catch (e) {
+    console.error(e);
+    document.getElementById("pro-status").innerText = "⚠️ Помилка перевірки PRO";
+  }
+}
+
 </script>
 
 </body>
