--- a/profile.html
+++ b/profile.html
@@ -52,13 +52,15 @@
 
   <!-- Telegram Login Widget -->
   <script async src="https://telegram.org/js/telegram-widget.js?22"
-          data-telegram-login=@RelaxBox_UA_bot"
-          data-size="large"
-          data-userpic="false"
-          data-request-access="write"
-          data-radius="8"
-          data-onauth="onTelegramAuth">
-  </script>
+        data-telegram-login="RelaxBox_UA_bot"
+        data-size="large"
+        data-userpic="false"
+        data-request-access="write"
+        data-radius="8"
+        data-auth-url="https://relaxbox.site/profile.html"
+        data-onauth="onTelegramAuth">
+</script>
+
 </div>
 
 
@@ -114,7 +116,7 @@ async function onTelegramAuth(user) {
 
   // 3️⃣ перевіряємо PRO у Google Таблиці
   try {
-    const res = await fetch("https://script.google.com/macros/s/ТУТ_ТВІЙ_АППС_СКРИПТ_URL/exec?user_id=" + user.id);
+    const res = await fetch("https://script.google.com/macros/s/AKfycbyrCxL8N7w1XC3JDU-A1QMlZn8NKs5QKaS1vg-TRjijk_zI00i_y5KP-N5_VNjUA17xyA/exec?user_id=" + encodeURIComponent(user.id));
     const json = await res.json();
 
     if (json.isPro) {
