--- a/header.html
+++ b/header.html
@@ -67,7 +67,7 @@
 <!-- === ПРАВА ЧАСТИНА === -->
 <div class="top-right">
   <input type="text" placeholder="Пошук…" class="search" />
-  <a href="/profile.html" class="profile-btn">👑 Мій кабінет</a>
+  <a href="https://relaxbox.site/profile.html" class="profile-btn">👑 Мій кабінет</a>
 </div>
 </div>
 </header>
