--- a/profile.html
+++ b/profile.html
@@ -57,9 +57,10 @@
         data-userpic="false"
         data-request-access="write"
         data-radius="8"
-        data-auth-url="https://relaxbox.site/profile.html"
+        data-auth-url="https://kino-site.pages.dev/profile.html"
         data-onauth="onTelegramAuth">
 </script>
+
 
 </div>
 
