--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,42 @@
   </style>
 </head>
 <body>
+<script>
+  // Перевіряємо, чи Telegram передав параметри через URL (user=...)
+  const params = new URLSearchParams(window.location.search);
+  if (params.has("id") && params.has("first_name")) {
+    const user = {
+      id: params.get("id"),
+      first_name: params.get("first_name"),
+      last_name: params.get("last_name"),
+      username: params.get("username")
+    };
+    console.log("✅ Telegram user:", user);
+
+    document.addEventListener("DOMContentLoaded", async () => {
+      document.getElementById("auth-card").style.display = "none";
+      document.getElementById("user-card").style.display = "block";
+      document.getElementById("hello-line").innerText =
+        `Вітаю, ${user.first_name || ""} ${user.last_name || ""}`.trim();
+
+      try {
+        const res = await fetch(
+          "https://script.google.com/macros/s/AKfycbyrCxL8N7w1XC3JDU-A1QMlZn8NKs5QKaS1vg-TRjijk_zI00i_y5KP-N5_VNjUA17xyA/exec?user_id=" + encodeURIComponent(user.id)
+        );
+        const json = await res.json();
+        if (json.isPro) {
+          const d = json.expireDate?.split("T")[0]?.split("-").reverse().join(".");
+          document.getElementById("pro-status").innerHTML = `✅ PRO активний до <b>${d}</b>`;
+        } else {
+          document.getElementById("pro-status").innerText = "❌ Без PRO";
+        }
+      } catch (err) {
+        console.error(err);
+        document.getElementById("pro-status").innerText = "⚠️ Помилка перевірки PRO";
+      }
+    });
+  }
+</script>
 
 <!-- підвантажуємо твій спільний хедер -->
 <div id="header-placeholder"></div>
